--- a/src/pages/Journal.astro
+++ b/src/pages/Journal.astro
@@ -30,7 +30,7 @@ let pictureTitle = title[0];
 		</div>
 	</main>
 </Layout>
-<style>
+<style is:inline>
 	.hollow-text {
 		font-size: 5rem;
 		font-weight: bold;
