--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -2,9 +2,11 @@
 import Footer from "./Footer.astro";
 import Header from "./Header.astro";
 import FAQSchema from "../seo/FAQSchema.json";
+import logo from "../icons/logo.svg";
 const { title } = Astro.props;
 const faqJson = JSON.stringify(FAQSchema);
 ---
+
 <!doctype html>
 <html lang="en">
   <head>
@@ -14,7 +16,7 @@ const faqJson = JSON.stringify(FAQSchema);
       content="Lockon 賴世原｜前端工程師，個人作品集、攝影紀錄、旅拍影像與影像創作。"
     />
     <meta name="viewport" content="width=device-width" />
-    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+    <link rel="icon" type="image/svg+xml" href={logo.src} />
     <meta name="generator" content={Astro.generator} />
     <title>{title}</title>
     <script is:inline type="application/ld+json" set:html={faqJson} />
